--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,26 +35,34 @@
     "feature_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS."
   },
   "Pricing": {
-    "section_subtitle": "Features",
-    "section_title": "Unlock the Full Potential of the SaaS Template",
-    "section_description": "A free and open-source landing page template for your SaaS business, built with React, TypeScript, Shadcn UI, and Tailwind CSS.",
-    "button_text": "Get Started"
+    "section_subtitle": "Subscription Tiers",
+    "section_title": "Find Your Next Opportunity – Smarter",
+    "section_description": "Flexible pricing for every Saudi job seeker. Start free, upgrade as you grow.",
+    "button_text": "Join Now"
   },
   "PricingPlan": {
     "free_plan_name": "Free",
-    "premium_plan_name": "Premium",
-    "enterprise_plan_name": "Enterprise",
-    "free_plan_description": "For individuals",
-    "premium_plan_description": "For small teams",
-    "enterprise_plan_description": "For industry leaders",
-    "feature_team_member": "{number} Team Members",
-    "feature_website": "{number} Websites",
-    "feature_storage": "{number} GB Storage",
-    "feature_transfer": "{number} TB Transfer",
-    "feature_email_support": "Email Support",
+    "premium_plan_name": "Plus",
+    "enterprise_plan_name": "Pro",
+    "free_plan_description": "Perfect for casual job seekers",
+    "premium_plan_description": "Ideal for serious applicants who want visibility",
+    "enterprise_plan_description": "For professionals ready to level up",
     "plan_interval_month": "month",
     "plan_interval_year": "year",
-    "next_renew_date": "Your subscription renews on {date}"
+    "next_renew_date": "Your subscription renews on {date}",
+    "feature_job_applications": "{number} Job Applications",
+    "feature_resume_builder": "Resume Builder",
+    "feature_save_job_alerts": "Save Job Alerts",
+    "feature_basic_ai_job_suggestions": "Basic AI Job Suggestions",
+    "feature_priority_cv_placement": "Priority CV Placement",
+    "feature_view_cv_views": "View Who Viewed Your CV",
+    "feature_add_portfolio": "Add Samples of Works/Portfolio",
+    "feature_add_references": "Add References",
+    "feature_resume_review_ai": "Resume/CV Review (AI-assisted)",
+    "feature_video_cv_spotlight": "Video CV Spotlight",
+    "feature_mock_interview_coaching": "Mock Interview Coaching",
+    "feature_verified_skills": "Add Up to {number} Verified Skills",
+    "feature_certification_badge": "Certification Badge on Profile"
   },
   "FAQ": {
     "question": "Lorem ipsum dolor sit amet, consectetur adipiscing elit?",
